--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -13,7 +13,8 @@ license = "MIT"
 [dependencies]
 fuse = "0.2.7"
 libc = "0.1"
-#log = "0.3"
+log = "0.3"
+env_logger = "0.3.2"
 time = "0.1"
 #thread-scoped = "1.0"
 argparse = "*"
