--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,7 +11,7 @@ keywords = ["fuse", "filesystem", "metadata", "faceted search"]
 license = "MIT"
 
 [dependencies]
-fuse = "0.2.7"
+#fuse = "0.2.7"
 libc = "0.1"
 log = "0.3"
 env_logger = "0.3.2"
